// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VideoResultTurnList before and after 1`] = `
<div>
  <VideoResult
    multiHighlight={
      Object {
        "cut": Array [
          0,
          276,
        ],
        "highlights": Array [
          Array [
            18,
            28,
          ],
        ],
      }
    }
    onPlayClick={[Function]}
    sortBy="BeforeAndAfter"
    turn={0}
    turnContent="Good evening. The television and radio stations of the United States and their affiliated stations are proud to provide facilities for a discussion of issues in the current political campaign by the two major candidates for the presidency. The candidates need no introduction. The Republican candidate, Vice President Richard M. Nixon, and the Democratic candidate, Senator John F. Kennedy. According to rules set by the candidates themselves, each man shall make an opening statement of approximately eight minutes' duration and a closing statement of approximately three minutes' duration. In between the candidates will answer, or comment upon answers to questions put by a panel of correspondents. In this, the first discussion in a series of four - joint appearances, the subject matter has been agreed, will be restricted to internal or domestic American matters. And now for the first opening statement by Senator John F. Kennedy."
    videoFact={
      Object {
        "charOffsets": Object {
          "0": 0,
          "1": 5,
          "10": 62,
          "100": 668,
          "101": 672,
          "102": 675,
          "103": 677,
          "104": 683,
          "105": 686,
          "106": 702,
          "107": 705,
          "108": 711,
          "109": 715,
          "11": 69,
          "110": 721,
          "111": 732,
          "112": 735,
          "113": 737,
          "114": 744,
          "115": 747,
          "116": 754,
          "117": 760,
          "118": 773,
          "119": 777,
          "12": 73,
          "120": 785,
          "121": 792,
          "122": 796,
          "123": 801,
          "124": 809,
          "125": 814,
          "126": 817,
          "127": 828,
          "128": 831,
          "129": 840,
          "13": 79,
          "130": 843,
          "131": 852,
          "132": 861,
          "133": 870,
          "134": 874,
          "135": 878,
          "136": 882,
          "137": 886,
          "138": 892,
          "139": 900,
          "14": 90,
          "140": 910,
          "141": 913,
          "142": 921,
          "143": 926,
          "144": 929,
          "145": 938,
          "146": 942,
          "147": 949,
          "148": 953,
          "149": 960,
          "15": 99,
          "16": 103,
          "17": 109,
          "18": 112,
          "19": 120,
          "2": 14,
          "20": 131,
          "21": 135,
          "22": 137,
          "23": 148,
          "24": 151,
          "25": 158,
          "26": 161,
          "27": 165,
          "28": 173,
          "29": 183,
          "3": 18,
          "30": 192,
          "31": 195,
          "32": 199,
          "33": 203,
          "34": 209,
          "35": 220,
          "36": 224,
          "37": 228,
          "38": 240,
          "39": 244,
          "4": 29,
          "40": 255,
          "41": 260,
          "42": 263,
          "43": 277,
          "44": 281,
          "45": 292,
          "46": 303,
          "47": 308,
          "48": 318,
          "49": 326,
          "5": 33,
          "50": 329,
          "51": 336,
          "52": 340,
          "53": 344,
          "54": 355,
          "55": 366,
          "56": 374,
          "57": 379,
          "58": 382,
          "59": 391,
          "6": 39,
          "60": 401,
          "61": 404,
          "62": 410,
          "63": 414,
          "64": 417,
          "65": 421,
          "66": 432,
          "67": 444,
          "68": 449,
          "69": 453,
          "7": 48,
          "70": 459,
          "71": 464,
          "72": 467,
          "73": 475,
          "74": 485,
          "75": 488,
          "76": 502,
          "77": 508,
          "78": 517,
          "79": 526,
          "8": 51,
          "80": 530,
          "81": 532,
          "82": 540,
          "83": 550,
          "84": 553,
          "85": 567,
          "86": 573,
          "87": 582,
          "88": 592,
          "89": 595,
          "9": 55,
          "90": 603,
          "91": 607,
          "92": 618,
          "93": 623,
          "94": 631,
          "95": 634,
          "96": 642,
          "97": 647,
          "98": 655,
          "99": 658,
          "length": 150,
        },
        "durationSeconds": 3536,
        "fact": Object {
          "kind": "video",
          "primaryDate": "1960-09-26",
          "primaryDateKind": "recorded",
          "title": "Presidential Debate - Kennedy, Nixon (1 of 4)",
        },
        "plainText": "Good evening. The television and radio stations of the United States and their affiliated stations are proud to provide facilities for a discussion of issues in the current political campaign by the two major candidates for the presidency. The candidates need no introduction. The Republican candidate, Vice President Richard M. Nixon, and the Democratic candidate, Senator John F. Kennedy. According to rules set by the candidates themselves, each man shall make an opening statement of approximately eight minutes' duration and a closing statement of approximately three minutes' duration. In between the candidates will answer, or comment upon answers to questions put by a panel of correspondents. In this, the first discussion in a series of four - joint appearances, the subject matter has been agreed, will be restricted to internal or domestic American matters. And now for the first opening statement by Senator John F. Kennedy.",
        "speakerPerson": Array [
          0,
        ],
        "speakerWord": Array [
          0,
        ],
        "speakers": Array [
          Object {
            "fullName": "Howard K Smith",
            "role": "Moderator",
          },
        ],
        "timestamps": Object {
          "0": 1.5199999809265137,
          "1": 2.5199999809265137,
          "10": 5.609000205993652,
          "100": 39,
          "101": 39.62900161743164,
          "102": 39.689998626708984,
          "103": 39.869998931884766,
          "104": 40.22999954223633,
          "105": 40.36899948120117,
          "106": 41.369998931884766,
          "107": 41.54999923706055,
          "108": 42.32899856567383,
          "109": 42.540000915527344,
          "11": 5.639999866485596,
          "110": 42.888999938964844,
          "111": 43.290000915527344,
          "112": 43.558998107910156,
          "113": 43.64899826049805,
          "114": 43.97999954223633,
          "115": 44.0099983215332,
          "116": 44.53900146484375,
          "117": 45.52899932861328,
          "118": 46.11000061035156,
          "119": 46.349998474121094,
          "12": 6.179999828338623,
          "120": 46.73899841308594,
          "121": 46.95000076293945,
          "122": 47.34000015258789,
          "123": 47.540000915527344,
          "124": 47.87900161743164,
          "125": 48.41999816894531,
          "126": 48.53900146484375,
          "127": 49.22999954223633,
          "128": 49.2599983215332,
          "129": 50.03900146484375,
          "13": 6.320000171661377,
          "130": 50.18000030517578,
          "131": 50.7599983215332,
          "132": 51,
          "133": 51.62900161743164,
          "134": 51.959999084472656,
          "135": 52.558998107910156,
          "136": 52.819000244140625,
          "137": 53.0099983215332,
          "138": 53.279998779296875,
          "139": 53.81999969482422,
          "14": 6.359000205993652,
          "140": 54.29999923706055,
          "141": 54.44900131225586,
          "142": 54.95000076293945,
          "143": 55.22999954223633,
          "144": 55.5,
          "145": 60,
          "146": 60.400001525878906,
          "147": 60.900001525878906,
          "148": 61,
          "149": 62.61899948120117,
          "15": 7.139999866485596,
          "16": 7.980000019073486,
          "17": 8.369999885559082,
          "18": 8.399999618530273,
          "19": 8.75,
          "2": 2.700000047683716,
          "20": 9.119999885559082,
          "21": 9.569999694824219,
          "22": 9.84000015258789,
          "23": 10.468999862670898,
          "24": 10.888999938964844,
          "25": 11.189000129699707,
          "26": 11.489999771118164,
          "27": 11.579999923706055,
          "28": 11.880000114440918,
          "29": 12.09000015258789,
          "3": 3.359999895095825,
          "30": 12.84000015258789,
          "31": 13.069999694824219,
          "32": 13.109999656677246,
          "33": 13.380000114440918,
          "34": 13.619999885559082,
          "35": 14.369999885559082,
          "36": 14.579999923706055,
          "37": 14.6899995803833,
          "38": 15.149999618530273,
          "39": 15.869999885559082,
          "4": 3.9590001106262207,
          "40": 16.350000381469727,
          "41": 16.52899932861328,
          "42": 16.670000076293945,
          "43": 17.100000381469727,
          "44": 17.81999969482422,
          "45": 18.358999252319336,
          "46": 18.799999237060547,
          "47": 19.049999237060547,
          "48": 19.59000015258789,
          "49": 19.739999771118164,
          "5": 4.110000133514404,
          "50": 19.889999389648438,
          "51": 20.038999557495117,
          "52": 20.608999252319336,
          "53": 20.709999084472656,
          "54": 21.719999313354492,
          "55": 22.139999389648438,
          "56": 22.618999481201172,
          "57": 22.858999252319336,
          "58": 23.09000015258789,
          "59": 23.809999465942383,
          "6": 4.21999979019165,
          "60": 24.809999465942383,
          "61": 24.93000030517578,
          "62": 25.108999252319336,
          "63": 25.52899932861328,
          "64": 25.559999465942383,
          "65": 25.790000915527344,
          "66": 26.368999481201172,
          "67": 27.09000015258789,
          "68": 27.65999984741211,
          "69": 28.018999099731445,
          "7": 4.949999809265137,
          "70": 28.27899932861328,
          "71": 28.43899917602539,
          "72": 28.559999465942383,
          "73": 28.889999389648438,
          "74": 28.948999404907227,
          "75": 29.479999542236328,
          "76": 30.179000854492188,
          "77": 30.420000076293945,
          "78": 30.809999465942383,
          "79": 31.139999389648438,
          "8": 5.068999767303467,
          "80": 31.518999099731445,
          "81": 31.618999481201172,
          "82": 31.829999923706055,
          "83": 32.130001068115234,
          "84": 32.57899856567383,
          "85": 33.290000915527344,
          "86": 33.56999969482422,
          "87": 33.71900177001953,
          "88": 34.40999984741211,
          "89": 35.040000915527344,
          "9": 5.190000057220459,
          "90": 35.459999084472656,
          "91": 35.65999984741211,
          "92": 36.119998931884766,
          "93": 36.29999923706055,
          "94": 36.5099983215332,
          "95": 36.98899841308594,
          "96": 37.59000015258789,
          "97": 37.790000915527344,
          "98": 38.34000015258789,
          "99": 38.54999923706055,
          "length": 150,
        },
        "youtubeId": "CsurHThBBkk",
      }
    }
  />
</div>
`;

exports[`VideoResultTurnList containing 1`] = `
<div>
  <VideoResult
    multiHighlight={
      Object {
        "cut": Array [
          14,
          239,
        ],
        "highlights": Array [
          Array [
            18,
            28,
          ],
        ],
      }
    }
    onPlayClick={[Function]}
    sortBy="Containing"
    turn={0}
    turnContent="Good evening. The television and radio stations of the United States and their affiliated stations are proud to provide facilities for a discussion of issues in the current political campaign by the two major candidates for the presidency. The candidates need no introduction. The Republican candidate, Vice President Richard M. Nixon, and the Democratic candidate, Senator John F. Kennedy. According to rules set by the candidates themselves, each man shall make an opening statement of approximately eight minutes' duration and a closing statement of approximately three minutes' duration. In between the candidates will answer, or comment upon answers to questions put by a panel of correspondents. In this, the first discussion in a series of four - joint appearances, the subject matter has been agreed, will be restricted to internal or domestic American matters. And now for the first opening statement by Senator John F. Kennedy."
    videoFact={
      Object {
        "charOffsets": Object {
          "0": 0,
          "1": 5,
          "10": 62,
          "100": 668,
          "101": 672,
          "102": 675,
          "103": 677,
          "104": 683,
          "105": 686,
          "106": 702,
          "107": 705,
          "108": 711,
          "109": 715,
          "11": 69,
          "110": 721,
          "111": 732,
          "112": 735,
          "113": 737,
          "114": 744,
          "115": 747,
          "116": 754,
          "117": 760,
          "118": 773,
          "119": 777,
          "12": 73,
          "120": 785,
          "121": 792,
          "122": 796,
          "123": 801,
          "124": 809,
          "125": 814,
          "126": 817,
          "127": 828,
          "128": 831,
          "129": 840,
          "13": 79,
          "130": 843,
          "131": 852,
          "132": 861,
          "133": 870,
          "134": 874,
          "135": 878,
          "136": 882,
          "137": 886,
          "138": 892,
          "139": 900,
          "14": 90,
          "140": 910,
          "141": 913,
          "142": 921,
          "143": 926,
          "144": 929,
          "145": 938,
          "146": 942,
          "147": 949,
          "148": 953,
          "149": 960,
          "15": 99,
          "16": 103,
          "17": 109,
          "18": 112,
          "19": 120,
          "2": 14,
          "20": 131,
          "21": 135,
          "22": 137,
          "23": 148,
          "24": 151,
          "25": 158,
          "26": 161,
          "27": 165,
          "28": 173,
          "29": 183,
          "3": 18,
          "30": 192,
          "31": 195,
          "32": 199,
          "33": 203,
          "34": 209,
          "35": 220,
          "36": 224,
          "37": 228,
          "38": 240,
          "39": 244,
          "4": 29,
          "40": 255,
          "41": 260,
          "42": 263,
          "43": 277,
          "44": 281,
          "45": 292,
          "46": 303,
          "47": 308,
          "48": 318,
          "49": 326,
          "5": 33,
          "50": 329,
          "51": 336,
          "52": 340,
          "53": 344,
          "54": 355,
          "55": 366,
          "56": 374,
          "57": 379,
          "58": 382,
          "59": 391,
          "6": 39,
          "60": 401,
          "61": 404,
          "62": 410,
          "63": 414,
          "64": 417,
          "65": 421,
          "66": 432,
          "67": 444,
          "68": 449,
          "69": 453,
          "7": 48,
          "70": 459,
          "71": 464,
          "72": 467,
          "73": 475,
          "74": 485,
          "75": 488,
          "76": 502,
          "77": 508,
          "78": 517,
          "79": 526,
          "8": 51,
          "80": 530,
          "81": 532,
          "82": 540,
          "83": 550,
          "84": 553,
          "85": 567,
          "86": 573,
          "87": 582,
          "88": 592,
          "89": 595,
          "9": 55,
          "90": 603,
          "91": 607,
          "92": 618,
          "93": 623,
          "94": 631,
          "95": 634,
          "96": 642,
          "97": 647,
          "98": 655,
          "99": 658,
          "length": 150,
        },
        "durationSeconds": 3536,
        "fact": Object {
          "kind": "video",
          "primaryDate": "1960-09-26",
          "primaryDateKind": "recorded",
          "title": "Presidential Debate - Kennedy, Nixon (1 of 4)",
        },
        "plainText": "Good evening. The television and radio stations of the United States and their affiliated stations are proud to provide facilities for a discussion of issues in the current political campaign by the two major candidates for the presidency. The candidates need no introduction. The Republican candidate, Vice President Richard M. Nixon, and the Democratic candidate, Senator John F. Kennedy. According to rules set by the candidates themselves, each man shall make an opening statement of approximately eight minutes' duration and a closing statement of approximately three minutes' duration. In between the candidates will answer, or comment upon answers to questions put by a panel of correspondents. In this, the first discussion in a series of four - joint appearances, the subject matter has been agreed, will be restricted to internal or domestic American matters. And now for the first opening statement by Senator John F. Kennedy.",
        "speakerPerson": Array [
          0,
        ],
        "speakerWord": Array [
          0,
        ],
        "speakers": Array [
          Object {
            "fullName": "Howard K Smith",
            "role": "Moderator",
          },
        ],
        "timestamps": Object {
          "0": 1.5199999809265137,
          "1": 2.5199999809265137,
          "10": 5.609000205993652,
          "100": 39,
          "101": 39.62900161743164,
          "102": 39.689998626708984,
          "103": 39.869998931884766,
          "104": 40.22999954223633,
          "105": 40.36899948120117,
          "106": 41.369998931884766,
          "107": 41.54999923706055,
          "108": 42.32899856567383,
          "109": 42.540000915527344,
          "11": 5.639999866485596,
          "110": 42.888999938964844,
          "111": 43.290000915527344,
          "112": 43.558998107910156,
          "113": 43.64899826049805,
          "114": 43.97999954223633,
          "115": 44.0099983215332,
          "116": 44.53900146484375,
          "117": 45.52899932861328,
          "118": 46.11000061035156,
          "119": 46.349998474121094,
          "12": 6.179999828338623,
          "120": 46.73899841308594,
          "121": 46.95000076293945,
          "122": 47.34000015258789,
          "123": 47.540000915527344,
          "124": 47.87900161743164,
          "125": 48.41999816894531,
          "126": 48.53900146484375,
          "127": 49.22999954223633,
          "128": 49.2599983215332,
          "129": 50.03900146484375,
          "13": 6.320000171661377,
          "130": 50.18000030517578,
          "131": 50.7599983215332,
          "132": 51,
          "133": 51.62900161743164,
          "134": 51.959999084472656,
          "135": 52.558998107910156,
          "136": 52.819000244140625,
          "137": 53.0099983215332,
          "138": 53.279998779296875,
          "139": 53.81999969482422,
          "14": 6.359000205993652,
          "140": 54.29999923706055,
          "141": 54.44900131225586,
          "142": 54.95000076293945,
          "143": 55.22999954223633,
          "144": 55.5,
          "145": 60,
          "146": 60.400001525878906,
          "147": 60.900001525878906,
          "148": 61,
          "149": 62.61899948120117,
          "15": 7.139999866485596,
          "16": 7.980000019073486,
          "17": 8.369999885559082,
          "18": 8.399999618530273,
          "19": 8.75,
          "2": 2.700000047683716,
          "20": 9.119999885559082,
          "21": 9.569999694824219,
          "22": 9.84000015258789,
          "23": 10.468999862670898,
          "24": 10.888999938964844,
          "25": 11.189000129699707,
          "26": 11.489999771118164,
          "27": 11.579999923706055,
          "28": 11.880000114440918,
          "29": 12.09000015258789,
          "3": 3.359999895095825,
          "30": 12.84000015258789,
          "31": 13.069999694824219,
          "32": 13.109999656677246,
          "33": 13.380000114440918,
          "34": 13.619999885559082,
          "35": 14.369999885559082,
          "36": 14.579999923706055,
          "37": 14.6899995803833,
          "38": 15.149999618530273,
          "39": 15.869999885559082,
          "4": 3.9590001106262207,
          "40": 16.350000381469727,
          "41": 16.52899932861328,
          "42": 16.670000076293945,
          "43": 17.100000381469727,
          "44": 17.81999969482422,
          "45": 18.358999252319336,
          "46": 18.799999237060547,
          "47": 19.049999237060547,
          "48": 19.59000015258789,
          "49": 19.739999771118164,
          "5": 4.110000133514404,
          "50": 19.889999389648438,
          "51": 20.038999557495117,
          "52": 20.608999252319336,
          "53": 20.709999084472656,
          "54": 21.719999313354492,
          "55": 22.139999389648438,
          "56": 22.618999481201172,
          "57": 22.858999252319336,
          "58": 23.09000015258789,
          "59": 23.809999465942383,
          "6": 4.21999979019165,
          "60": 24.809999465942383,
          "61": 24.93000030517578,
          "62": 25.108999252319336,
          "63": 25.52899932861328,
          "64": 25.559999465942383,
          "65": 25.790000915527344,
          "66": 26.368999481201172,
          "67": 27.09000015258789,
          "68": 27.65999984741211,
          "69": 28.018999099731445,
          "7": 4.949999809265137,
          "70": 28.27899932861328,
          "71": 28.43899917602539,
          "72": 28.559999465942383,
          "73": 28.889999389648438,
          "74": 28.948999404907227,
          "75": 29.479999542236328,
          "76": 30.179000854492188,
          "77": 30.420000076293945,
          "78": 30.809999465942383,
          "79": 31.139999389648438,
          "8": 5.068999767303467,
          "80": 31.518999099731445,
          "81": 31.618999481201172,
          "82": 31.829999923706055,
          "83": 32.130001068115234,
          "84": 32.57899856567383,
          "85": 33.290000915527344,
          "86": 33.56999969482422,
          "87": 33.71900177001953,
          "88": 34.40999984741211,
          "89": 35.040000915527344,
          "9": 5.190000057220459,
          "90": 35.459999084472656,
          "91": 35.65999984741211,
          "92": 36.119998931884766,
          "93": 36.29999923706055,
          "94": 36.5099983215332,
          "95": 36.98899841308594,
          "96": 37.59000015258789,
          "97": 37.790000915527344,
          "98": 38.34000015258789,
          "99": 38.54999923706055,
          "length": 150,
        },
        "youtubeId": "CsurHThBBkk",
      }
    }
  />
</div>
`;
